<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Roll-a-Ball</string>
    <string name="game_view_content_description">Roll-a-Ball</string>

    <string name="welcome">Welcome to Roll-a-Ball!</string>
    <string name="choose_control_mode">Choose control mode</string>
    <string name="control_mode_accelerometer">Accelerometer</string>
    <string name="control_mode_gyroscope">Gyroscope</string>
    <string name="control_mode_joystick">Joystick</string>

</resources>
